--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href ="../src/style.css">
-  <title>Document</title>
-</head>
-<body>
-  <div class="main-container"></div>
-  <div class = "loading"><p>Loading...</p></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../src/style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="main-container"></div>
+    <div class="loading"><p>Loading...</p></div>
+  </body>
 </html>
